--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,6 @@
 <header class="header {{ if .IsHome }}header--home{{ end }}">
   <div class="container header__container">
     {{ partial "menu.html" . }}
-   </div>
+    {{ partial "custom-logo" . }}
+  </div>
 </header>
