--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,23 +1,41 @@
-{{- if .Site.Menus.main }}
-<nav class="menu">
-	<button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
-		<span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
-	</button>
-	<ul class="menu__list">
-		{{- $currentNode := . }}
-		{{- range .Site.Menus.main }}
-		{{- if .Name }}
-		<li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
-			<a class="menu__link" href="{{ .URL }}">
-				{{ .Pre }}
-				<span class="menu__text">{{ .Name }}</span>
-				{{ .Post }}
-			</a>
-		</li>
-		{{- end }}
-		{{- end }}
-	</ul>
-</nav>
-{{ else -}}
-<div class="divider"></div>
-{{- end }}
+<header class="site-header">
+    <div class="header-container">
+        <div class="my-header-logo">
+            <a href="/" class="my-logo-link">
+                <div class="my-logo-wrapper">
+                    {{ with .Site.Params.logo.image }}
+                        <img class="my-logo-image" src="{{ . | relURL }}" alt="לוגו">
+                    {{ end }}
+                    <div class="my-logo-text">
+                        <div class="my-logo-title">{{ .Site.Params.logo.title }}</div>
+                        <div class="my-logo-subtitle">{{ .Site.Params.logo.subtitle }}</div>
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        {{- if .Site.Menus.main }}
+        <nav class="menu">
+            <button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
+                <span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
+            </button>
+            <ul class="menu__list">
+                {{- $currentNode := . }}
+                {{- range .Site.Menus.main }}
+                {{- if .Name }}
+                <li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
+                    <a class="menu__link" href="{{ .URL }}">
+                        {{ .Pre }}
+                        <span class="menu__text">{{ .Name }}</span>
+                        {{ .Post }}
+                    </a>
+                </li>
+                {{- end }}
+                {{- end }}
+            </ul>
+        </nav>
+        {{ else -}}
+        <div class="divider"></div>
+        {{- end }}
+    </div>
+</header>
