--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,15 @@
 <header class="site-header">
-    <div class="header-container">
-        <div class="header-top-row">
+    <div class="top-bar">
+        <div class="header-container top-bar__container">
+            <div class="top-bar__links">
+                <a href="/patient-support" class="top-bar__link">Patient Support</a>
+                <a href="/patient-portal" class="top-bar__link">Patient Portal</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="main-header-row">
+        <div class="header-container main-header__container">
             <div class="my-header-logo">
                 <a href="/" class="my-logo-link">
                     <div class="my-logo-wrapper">
@@ -15,34 +24,36 @@
                 </a>
             </div>
             
-            <div class="header-buttons">
-                <a href="/your-first-button-link" class="button button-primary">כפתור אחד</a>
-                <a href="/your-second-button-link" class="button button-secondary">כפתור שני</a>
+            <div class="header-nav-and-buttons">
+                {{- if .Site.Menus.main }}
+                <nav class="menu main-navigation-menu">
+                    <button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
+                        <span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
+                    </button>
+                    <ul class="menu__list">
+                        {{- $currentNode := . }}
+                        {{- range .Site.Menus.main }}
+                        {{- if .Name }}
+                        <li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
+                            <a class="menu__link" href="{{ .URL }}">
+                                {{ .Pre }}
+                                <span class="menu__text">{{ .Name }}</span>
+                                {{ .Post }}
+                            </a>
+                        </li>
+                        {{- end }}
+                        {{- end }}
+                    </ul>
+                </nav>
+                {{ else -}}
+                <div class="divider"></div>
+                {{- end }}
+
+                <div class="header-action-buttons">
+                    <a href="tel:(512) 956-6463" class="button button-action-primary">Call Now: (512) 956-6463</a>
+                    <a href="/book-an-appointment" class="button button-action-secondary">Book An Appointment</a>
+                </div>
             </div>
         </div>
-
-        {{- if .Site.Menus.main }}
-        <nav class="menu main-navigation-menu">
-            <button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
-                <span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
-            </button>
-            <ul class="menu__list">
-                {{- $currentNode := . }}
-                {{- range .Site.Menus.main }}
-                {{- if .Name }}
-                <li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
-                    <a class="menu__link" href="{{ .URL }}">
-                        {{ .Pre }}
-                        <span class="menu__text">{{ .Name }}</span>
-                        {{ .Post }}
-                    </a>
-                </li>
-                {{- end }}
-                {{- end }}
-            </ul>
-        </nav>
-        {{ else -}}
-        <div class="divider"></div>
-        {{- end }}
     </div>
 </header>
