--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,35 +1,6 @@
-<header class="site-header">
-    <div class="main-header-row">
-        <div class="header-container main-header__container">
-            {# הלוגו היה כאן והוסר #}
-
-            <div class="header-nav-and-buttons">
-                {{- if .Site.Menus.main }}
-                <nav class="menu main-navigation-menu">
-                    <button class="menu__btn" aria-haspopup="true" aria-expanded="false" tabindex="0">
-                        <span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
-                    </button>
-                    <ul class="menu__list">
-                        {{- $currentNode := . }}
-                        {{- range .Site.Menus.main }}
-                        {{- if .Name }}
-                        <li class="menu__item{{ if or ($currentNode.IsMenuCurrent "main" .) ($currentNode.HasMenuCurrent "main" .) }} menu__item--active{{ end }}">
-                            <a class="menu__link" href="{{ .URL }}">
-                                {{ .Pre }}
-                                <span class="menu__text">{{ .Name }}</span>
-                                {{ .Post }}
-                            </a>
-                        </li>
-                        {{- end }}
-                        {{- end }}
-                    </ul>
-                </nav>
-                {{ else -}}
-                <div class="divider"></div>
-                {{- end }}
-
-                {# הכפתורים היו כאן והוסרו #}
-            </div>
-        </div>
-    </div>
+<header class="header {{ if .IsHome }}header--home{{ end }}">
+  <div class="container header__container">
+    {{ partial "menu.html" . }}
+    {{ partial "custom-logo" . }}
+  </div>
 </header>
