--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -622,7 +622,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 
 .menu__list {
   list-style: none;
-  background:none;
+  background: #00ACC1; /* A teal blue color */
 }
 
 .menu__item:hover {
@@ -640,11 +640,11 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 .menu__link {
   display: block;
   padding: 10px 15px;
-  padding: 0.725rem 1rem;
-  font-weight: 400;
-  color:#000;
+  padding: 0.725rem 3rem;
+  font-weight: 500;
+  color: #fff;
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 23px;
   
 }
 
@@ -675,7 +675,10 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
   transition: visibility 0.15s ease, transform 0.15s ease, -webkit-transform 0.15s ease;
 }
 
-
+@media screen and (min-width: 767px) {
+  .menu {
+    border-bottom: 15px solid var(--highlight-color); /* Highlight colored bottom border */
+  }
 
   .menu__btn {
     display: none;
