--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header {{ if .IsHome }}header--home{{ end }}">
   <div class="container header__container">
-    {{ partial "custom-logo" . }}
     {{ partial "menu.html" . }}
-    {{ partial "hero-section" . }}
+    {{ partial "custom-logo" . }}
+  {{ partial "hero-section.html" . }} 
   </div>
 </header>
